--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
+D:\Projects\oneday_project\build\relinquished-1.0.0-debug.console.exe
+D:\Projects\oneday_project\build\relinquished-1.0.0-debug.exe
+D:\Projects\oneday_project\build\relinquished-1.0.0-debug.pck
